--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "12.5.1",
     "dotenv": "^8.2.0",
+    "eslint": "^7.18.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "slash-create": "1.3.0",
