--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "git+https://github.com/ryceg/Eigengrau-s-Helper.git"
   },
+  "lint-staged": {
+    "*.{js,ts}": "eslint --fix"
+  },
   "devDependencies": {
     "@types/node": "^14.14.14",
     "@types/pg": "^7.14.7",
